# 2DMeanField

./: .gitignore  CMakeLists.txt  README.md  UseMeanField.cmake
demo_images/: notice.txt
src/app/: CMakeLists.txt  demo_app.cpp  demo_app.h  demo_app.hpp
src/lib/: 2DMeanField.h  2DMeanField.hpp  CMakeLists.txt
src/lib/CPU/: filtering_cpu.cpp  filtering_cpu.h  meanfield_cpu.cpp  meanfield_cpu.h  meanfield_cpu.hpp
src/lib/CUDA/: cuda_util.h  filtering_cuda.cu  filtering_cuda.h  meanfield_cuda.cu  meanfield_cuda.h  meanfield_cuda.hpp
src/lib/shared/: bilateral_filter.h  bilateral_filter.hpp  code_sharing.h  gaussian_filter.h  gaussian_filter.hpp  meanfield.h  meanfield.hpp
